# tree-menu

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
static/css/: style.css
tree_menu/: settings.py  urls.py
tree_menu/components/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
tree_menu/components/migrations/: 0001_initial.py
tree_menu/menus/: admin.py  apps.py  models.py  urls.py  views.py
tree_menu/menus/migrations/: 0001_initial.py
tree_menu/templates/: base.html  index.html
tree_menu/templates/components/: component.html  menu-components.html
