[tool.poetry]
name = "tree-menu"
version = "0.1.0"
description = ""
authors = ["Dddarknight <9801677@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
python-dotenv = "^0.21.1"
django-debug-toolbar = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
